--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "google-auth-library": "^9.15.1",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
