--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mui/material": "^7.0.2",
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.7.9",
+    "framer-motion": "^12.6.5",
     "google-auth-library": "^9.15.1",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
